--- a/templates/agriculture/officer_dashboard.html
+++ b/templates/agriculture/officer_dashboard.html
@@ -196,6 +196,7 @@
             text-transform: uppercase;
             opacity: 0.5;
             letter-spacing: 1px;
+            color: #0f172a;
         }
 
         /* --- Cards & Components --- */
