--- a/templates/city/staff_dashboard.html
+++ b/templates/city/staff_dashboard.html
@@ -144,6 +144,7 @@
             text-transform: uppercase;
             opacity: 0.5;
             letter-spacing: 1px;
+            color: #0f172a;
         }
 
         /* --- Cards --- */
